SVN_SILENT made messages (.desktop file)

--- a/libs/kotext/inlinetextobject.desktop
+++ b/libs/kotext/inlinetextobject.desktop
@@ -5,6 +5,7 @@ Name[ca]=Connector d'objecte de text a la línia
 Name[de]=Mitfließendes-Textobjekt-Modul
 Name[el]=Πρόσθετο ενσωμάτωσης αντικειμένου κειμένου
 Name[es]=Complemento de objetos incorporados de texto
+Name[fi]=Liitännäinen rivinsisäisiä tekstiobjekteja varten
 Name[ja]=インラインテキストオブジェクトのためのプラグイン
 Name[ne]=इनलाइन पाठ वस्तु प्लगइन
 Name[pt]='Plugin' do Objecto Incorporado de Texto
@@ -19,6 +20,7 @@ Comment[ca]=Definició d'objecte de text
 Comment[de]=Definition eines Textobjektes
 Comment[el]=Ορισμός ενός αντικειμένου κειμένου
 Comment[es]=Definición de un objeto de texto
+Comment[fi]=Tekstiobjektin määrittely
 Comment[ne]=पाठ वस्तुको परिभाषा
 Comment[pt]=Definição de um objecto de texto
 Comment[pt_BR]=Definição de um objeto de texto
