--- a/libs/kotext/texteditingplugin.desktop
+++ b/libs/kotext/texteditingplugin.desktop
@@ -5,6 +5,7 @@ Name[ca]=Connector d'edició de text per a l'eina de text del KOffice
 Name[de]=Modul zur Textbearbeitung für das KOffice-Textwerkzeug
 Name[el]=Πρόσθετο επεξεργασίας κειμένου για το KOffice
 Name[es]=Complemento de edición de texto para la herramienta de texto de KOffice
+Name[fi]=Tekstin muokkausliitännäinen KOffice-tekstityökalua varten
 Name[ja]=KOffice テキストツールのためのテキスト編集プラグイン
 Name[ne]=केडीई कार्यालय पाठ उपकरणका लागि पाठ सम्पादन प्लगइन
 Name[pt]='Plugin' de edição de texto para o KOffice
@@ -19,6 +20,7 @@ Comment[ca]=Definició d'un connector d'edició de text
 Comment[de]=Definition eines Moduls zur Textbearbeitung
 Comment[el]=Καθορισμός ενός πρόσθετου επεξεργασίας κειμένου
 Comment[es]=Definición de un complemento de edición de texto
+Comment[fi]=Tekstinmuokkausliitännäisen määrittely
 Comment[ne]=पाठ सम्पादन प्लगइनको परिभाषा
 Comment[pt]=Definição de um 'plugin' de edição de texto
 Comment[pt_BR]=Definição de um plugin de edição de texto
