--- a/shapes/musicshape/musicshape.desktop
+++ b/shapes/musicshape/musicshape.desktop
@@ -5,6 +5,7 @@ Name[ca]=Forma de música
 Name[de]=Musik-Objekt
 Name[el]=Μουσικό σχήμα
 Name[es]=Forma musical
+Name[fi]=Musiikkihahmo
 Name[ga]=Giuirléid Cheoil
 Name[ja]=音楽シェイプ
 Name[ne]=सङ्गीत आकार
