--- a/shapes/pathshapes/pathshapes.desktop
+++ b/shapes/pathshapes/pathshapes.desktop
@@ -6,6 +6,7 @@ Name[ca]=Formes de camí
 Name[de]=Linienketten-Objekt
 Name[el]=Σχήματα διαδρομής
 Name[es]=Formas de trazo
+Name[fi]=Polkuhahmot
 Name[ga]=Giuirléidí Conaire
 Name[ja]=パスシェイプ
 Name[ne]=मार्ग आकार
