--- a/shapes/text/textshape.desktop
+++ b/shapes/text/textshape.desktop
@@ -5,6 +5,7 @@ Name[ca]=Forma de text
 Name[de]=Text-Objekt
 Name[el]=Σχήμα κειμένου
 Name[es]=Forma de texto
+Name[fi]=Tekstihahmo
 Name[ga]=Giuirléid Téacs
 Name[ja]=テキストシェイプ
 Name[ne]=पाठ आकार
