--- a/shapes/videoshape/videoshape.desktop
+++ b/shapes/videoshape/videoshape.desktop
@@ -5,6 +5,7 @@ Name[ca]=Forma de vídeo
 Name[de]=Video-Objekt
 Name[el]=Σχήμα βίντεο
 Name[es]=Forma de vídeo
+Name[fi]=Videohahmo
 Name[ga]=Giuirléid Fhíseáin
 Name[ja]=動画シェイプ
 Name[ne]=भिडियो आकार
