--- a/shapes/divineProportion/divineproportionshape.desktop
+++ b/shapes/divineProportion/divineproportionshape.desktop
@@ -5,6 +5,7 @@ Name[ca]=Forma de proporció divina
 Name[de]=Göttliche-Teilung-Objekt
 Name[el]=Σχήμα θεϊκής αναλογίας
 Name[es]=Forma de proporción áurea
+Name[fi]=Kultainen leikkaus -hahmo
 Name[ga]=Giuirléid Chóimheasa Diaga
 Name[ja]=黄金分割シェイプ
 Name[ne]=उच्चतम अनुपात आकार
