--- a/shapes/pictureshape/pictureshape.desktop
+++ b/shapes/pictureshape/pictureshape.desktop
@@ -5,6 +5,7 @@ Name[ca]=Forma d'imatge
 Name[de]=Bild-Objekt
 Name[el]=Σχήμα εικόνας
 Name[es]=Forma de imagen
+Name[fi]=Kuvahahmo
 Name[ga]=Giuirléid Phictiúir
 Name[ne]=तस्बीर आकार
 Name[pt]=Forma de Imagem
