SVN_SILENT made messages (.desktop file)

--- a/kpresenter/templates/Screenpresentations/CopperPlain.desktop
+++ b/kpresenter/templates/Screenpresentations/CopperPlain.desktop
@@ -58,6 +58,7 @@ Comment[et]=Elegantne esitlus
 Comment[fa]=ارائه‌ای زیبا و نشاط‌آور
 Comment[fi]=OASIS OpenDocument -esitys
 Comment[fr]=Une présentation élégante et joyeuse
+Comment[fy]=In elegante en Ferheffende presintaasje
 Comment[gl]=Unha presentación elegante
 Comment[hu]=Elegáns, felemelő bemutató
 Comment[is]=Fín kynning
