--- a/filters/kchart/mng/kchart_mng_export.desktop
+++ b/filters/kchart/mng/kchart_mng_export.desktop
@@ -12,6 +12,7 @@ Name[et]=KCharti MNG ekspordifilter
 Name[fa]=پالایۀ صادرات KChart MNG
 Name[fi]=KChart MNG -vientisuodin
 Name[fr]=Filtre d'exportation MNG de KChart
+Name[fy]=MNG-Eksportfilter foar KChart
 Name[he]=KChart MNG מסנן יצוא
 Name[hr]=KChart MNG filtar izvoza
 Name[hu]=KChart MNG exportszűrő
