started unification of the resource item choosers

--- a/libs/guiutils/CMakeLists.txt
+++ b/libs/guiutils/CMakeLists.txt
@@ -62,6 +62,7 @@ set(koguiutils_LIB_SRCS
    KoShapePainter.cpp
    KoProgressBar.cpp
    KoPositionSelector.cpp
+   KoResourceItemChooser.cpp
 )
 
 kde4_add_ui_files( koguiutils_LIB_SRCS
