Added the rpyfunctions.py python script that provides 45 new functions to access the R programming environment for data analysis and graphics ( http://www.r-project.org ) using the RPy python module ( http://rpy.sourceforge.net ). We support all r.* functions Gnumeric knows about now btw :)
FEATURE

--- a/kspread/plugins/scripting/scripts/CMakeLists.txt
+++ b/kspread/plugins/scripting/scripts/CMakeLists.txt
@@ -15,6 +15,7 @@ install(FILES
 
 install(FILES
     functions.py
+    rpyfunctions.py
     yfinance.py yweather.py
     pytime.py pyregexp.py
     DESTINATION ${DATA_INSTALL_DIR}/kspread/scripts/functions)
